@@ -1,3 +1,7 @@
+2011-02-08
+ * added loopcount command to script stdin/out
+ * single script command
+
 2011-02-01
  * finished and documented (man page) rts2-queue
  * removed rts2-clearq (replaced with --clear option to rts2-queue)
